--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -45,11 +45,10 @@
               </tr>
           </ng-template>
       </p-table>
-      <div style="position: relative; float: right;margin-top: 5px;">
+      <div class="button-positioner">
         <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}"></p-button>
-        <div class="divider"></div>
       </div>
-      <div style="position: relative; float: right;margin-top: 5px;">
+      <div class="button-positioner">
         <p-button icon="fa fa-edit" (click)="showDialogToEdit()" label="{{ translate.get('Edit Account') | async }}"></p-button>
         <div class="divider"></div>
       </div>
