--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -41,13 +41,22 @@
                     <input pInputText type="text" [(ngModel)]="rowData[col.field]" [disabled]="i%2 === 0">
                   </ng-template>
                   <ng-template pTemplate="output">
-                    {{rowData[col.field]}}
+                    {{rowData[col.field] | translate}}
                   </ng-template>
                 </p-cellEditor>
               </td>
             </tr>
           </ng-template>
         </p-table>
+
+        <div class="button-positioner">
+          <p-button icon="fa fa-plus" label="{{ translate.get('Create Template') | async }}"></p-button>
+        </div>
+        <div class="button-positioner">
+          <p-button icon="fa fa-edit" label="{{ translate.get('Edit Template') | async }}"></p-button>
+          <div class="divider"></div>
+        </div>
+
       </div>
     </nb-card-body>
   </nb-card>
