template mapping: integrated with mock BE.

--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -56,6 +56,10 @@
           <p-button icon="fa fa-edit" label="{{ translate.get('Edit Template') | async }}"></p-button>
           <div class="divider"></div>
         </div>
+        <div class="button-positioner">
+          <p-button icon="fa fa-save" label="{{ translate.get('Save Template') | async }}"></p-button>
+          <div class="divider"></div>
+        </div>
 
       </div>
     </nb-card-body>
