simplification - all IDs as long; template - integrated with BE.

--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -17,7 +17,7 @@
           </div>
         </div>
 
-        <p-table [columns]="cols" [value]="mappings" [style]="{width:'100%'}" scrollHeight="58vh">
+        <p-table [columns]="cols" [value]="mappings" [style]="{width:'100%'}" [scrollable]="true" scrollHeight="58vh">
 
           <ng-template pTemplate="colgroup" let-columns>
             <colgroup>
