--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -12,7 +12,7 @@
 
         <div style="position: relative; float: right; margin-top: 5px;margin-bottom: 5px;">
           <div class="ui-inputgroup" >
-              <p-dropdown [(ngModel)]="template" editable="true"  [options]="templates" optionLabel="label"
+              <p-dropdown [(ngModel)]="template" [options]="templates" optionLabel="label"
               (onChange)="onTemplateChange($event)"  autoWidth="false" [style]="{'width':'400px'}"></p-dropdown>
           </div>
         </div>
@@ -50,21 +50,10 @@
         </p-table>
 
         <div class="button-positioner">
-          <p-button icon="fa fa-plus" label="{{ translate.get('Create Template') | async }}"></p-button>
-        </div>
-        <div class="button-positioner">
-          <p-button icon="fa fa-edit" label="{{ translate.get('Edit Template') | async }}"></p-button>
+          <p-button icon="fa fa-save"  (click)="save()" label="{{ translate.get('Save Changes') | async }}"></p-button>
           <div class="divider"></div>
         </div>
-        <div class="button-positioner">
-          <p-button icon="fa fa-save"  (click)="save()" label="{{ translate.get('Save Template') | async }}"></p-button>
-          <div class="divider"></div>
         </div>
-        <div class="button-positioner">
-          <p-button icon="fa fa-trash"  (click)="delete()" label="{{ translate.get('Delete Template') | async }}"></p-button>
-          <div class="divider"></div>
-        </div>
-      </div>
     </nb-card-body>
   </nb-card>
 </div>
