Device renamed to UserCard.

--- a/src/app/pages/user-card/user-card.component.html
+++ b/src/app/pages/user-card/user-card.component.html
@@ -39,7 +39,7 @@
       <div style="position: relative; float: right; margin-top: 5px;">
         <p-button label="Export"></p-button>
         <div class="divider"></div>
-        <p-button label="Import"></p-button>
+        <p-button label="Import" (onClick)="onImportClick()"></p-button>
         <div class="divider"></div>
         <p-button label="Delete"></p-button>
         <div class="divider"></div>
