--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -11,9 +11,9 @@
         </div>
 
         <div style="position: relative; float: right; margin-top: 5px;margin-bottom: 5px;">
-          <div class="ui-inputgroup" >
-              <p-dropdown [(ngModel)]="template" [options]="templates" optionLabel="label"
-              (onChange)="onTemplateChange($event)"  autoWidth="false" [style]="{'width':'400px'}"></p-dropdown>
+          <div class="ui-inputgroup">
+            <p-dropdown [(ngModel)]="template" [options]="templates" optionLabel="label" name="template"
+              (onChange)="onTemplateChange($event)" autoWidth="false" [style]="{'width':'400px'}"></p-dropdown>
           </div>
         </div>
 
@@ -34,8 +34,9 @@
           </ng-template>
 
           <ng-template pTemplate="body" let-rowData let-columns="cols">
-            <tr >
-              <td  *ngFor="let col of cols; let i = index" [attr.data-index]="i" pEditableColumn   [ngClass]="i%2 === 0 ? 'key-col' : null" >
+            <tr>
+              <td *ngFor="let col of cols; let i = index" [attr.data-index]="i" pEditableColumn
+                [ngClass]="i%2 === 0 ? 'key-col' : null">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
                     <input pInputText type="text" [(ngModel)]="rowData[col.field]" [disabled]="i%2 === 0">
@@ -48,12 +49,49 @@
             </tr>
           </ng-template>
         </p-table>
-
+        
         <div class="button-positioner">
-          <p-button icon="fa fa-save"  (click)="save()" label="{{ translate.get('Save Changes') | async }}"></p-button>
+          <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Add Template') | async }}"></p-button>
           <div class="divider"></div>
         </div>
+        <div class="button-positioner">
+          <p-button icon="fa fa-save" (click)="save()" label="{{ translate.get('Save Changes') | async }}"></p-button>
+          <div class="divider"></div>
         </div>
-    </nb-card-body>
-  </nb-card>
+        <div class="button-positioner">
+          <p-button icon="fa fa-trash" (click)="delete()" label="{{ translate.get('Delete Template') | async }}"></p-button>
+          <div class="divider"></div>
+        </div>
+        
+      </div>
+
+      <p-dialog header="Add Template" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
+        showEffect="fade" [modal]="true" height="600" [style]="{width: '500px'}">
+        <div class="ui-g ui-fluid">
+          <form [formGroup]="addTemplateNameForm" (ngSubmit)="saveNewTemplate()">
+            <div class="ui-g-12">
+              <div class="ui-g-4">
+                <label for="templateName">{{ 'Template Name' | translate}}:</label>
+              </div>
+              <div class="ui-g-8">
+                <input pInputText id="templateName" formControlName="templateName"
+                  onclick="this.setSelectionRange(0, this.value.length)" autofocus class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f.templateName.errors }" />
+                <div *ngIf="submitted && f.templateName.errors" class="invalid-feedback">
+                  <div *ngIf="f.templateName.errors.required">Template Name is required.</div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      <p-footer>
+        <div class="ui-dialog-buttonpane ui-helper-clearfix">
+          <button type="button" pButton icon="fa fa-check" (click)="saveNewTemplate()"
+            label="{{ translate.get('Add Template') | async }}"></button>
+        </div>
+      </p-footer>
+    </p-dialog>
+
+</nb-card-body>
+</nb-card>
 </div>
