--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -18,7 +18,9 @@
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
                [name]="user?.name"
+               [nbContextMenuTag]="tag"
                [picture]="user?.picture">
+               
       </nb-user>
     </nb-action>
   </nb-actions>
