Added confirmation dialog.

--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -105,6 +105,9 @@
         </p-footer>
       </p-dialog>
 
+      <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+
+
 </nb-card-body>
 </nb-card>
 </div>
