added steps 1 and 2 for stepper.

--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -33,7 +33,7 @@
             </p>
             <div class="input-group">
               <div class="ui-inputgroup">
-                <p-dropdown formControlName="templateName" [options]="templates" optionLabel="label" name="templateName"
+                <p-dropdown formControlName="fileType" [options]="fileTypes" optionLabel="label" name="fileType"
                   autoWidth="false" [style]="{'width':'400px'}"></p-dropdown>
               </div>
             </div>
