--- a/src/app/pages/import-export/import-user-card.component.css
+++ b/src/app/pages/import-export/import-user-card.component.css
@@ -14,3 +14,18 @@
   text-align: justify;
   margin-bottom: 2rem;
 }
+
+:host ::ng-deep .ui-toast {
+  top: 80px;
+}
+:host ::ng-deep .news-active .ui-toast {
+  top: 150px;
+}
+@media screen and (max-width: 64em) {
+  :host ::ng-deep .ui-toast {
+      top: 110px;
+  }
+  :host ::ng-deep .news-active .ui-toast {
+      top: 180px;
+  }
+}
