import user card: added spinner.

--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <nb-card style="width: 100%">
+  <nb-card style="width: 100%"  [nbSpinner]="loading" nbSpinnerStatus="danger">
     <nb-card-body>
 
       <div class="header-container">
