--- a/src/app/pages/import-export/import-mapper.component.html
+++ b/src/app/pages/import-export/import-mapper.component.html
@@ -1,4 +1,4 @@
-<p-table [columns]="cols" [value]="imports" #table [scrollable]="true" [paginator]="true" [rows]="20"  [style]="{width:'59%'}" scrollHeight="40vh" >
+<p-table [columns]="cols" [value]="imports"  #table [scrollable]="true" [paginator]="true" [rows]="20"  [style]="{width:'59%'}" scrollHeight="40vh" >
 
   <ng-template pTemplate="colgroup" let-columns>
     <colgroup>
@@ -15,10 +15,19 @@
               <p-dropdown [options]="choices"
               (onChange)="onSelectionChange()"
               (selectedOption)="choices[0]" [(ngModel)]="rowData[col.field]"
-                [style]="{'width':'100%'}"></p-dropdown>
+                [style]="{'width':'100%'}">
+
+                <ng-template pTemplate="item" let-item>
+                  {{item.label | translate}}
+                  </ng-template>
+                  <ng-template let-selectedItem pTemplate="selectedItem">
+                    {{selectedItem.label | translate}}
+                    </ng-template>
+
+              </p-dropdown>
             </ng-template>
             <ng-template pTemplate="output">
-              <div style="color: #007ad9"><b>{{rowData[col.field]}}</b></div>
+              <div style="color: #007ad9"><b>{{ rowData[col.field] | translate }}</b></div>
             </ng-template>
           </p-cellEditor>
         </td>
