--- a/src/app/pages/user-card/user-card.component.html
+++ b/src/app/pages/user-card/user-card.component.html
@@ -7,35 +7,38 @@
         </div>
 
       </div>
-      <p-table [columns]="cols" [value]="userCards" [lazy]="true" #table (onLazyLoad)="loadUserCardsLazy($event)"
-        [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}"
-        scrollHeight="58vh" selectionMode="single" [(selection)]="selectedUserCard" dataKey="siteId"
-        [totalRecords]="totalRecords">
 
-        <ng-template pTemplate="colgroup" let-columns>
-          <colgroup>
-            <col *ngFor="let col of columns | slice:1" [style.width]="col.width" [pSortableColumn]>
-          </colgroup>
-        </ng-template>
+      <ng-container *ngIf="cols$ | async as cols">
+        <p-table [columns]="cols" [value]="userCards" [lazy]="true" #table (onLazyLoad)="loadUserCardsLazy($event)"
+          [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}"
+          scrollHeight="58vh" selectionMode="single" [(selection)]="selectedUserCard" dataKey="siteId"
+          [totalRecords]="totalRecords">
 
-        <ng-template pTemplate="header" let-columns>
-          <tr>
-            <th *ngFor="let col of columns | slice:1" [pSortableColumn]="col.field" (onClick)=resetSort()>
-              {{col.header | translate}}
-              <p-sortIcon [field]="col.field"></p-sortIcon>
-            </th>
-          </tr>
-        </ng-template>
+          <ng-template pTemplate="colgroup" let-columns>
+            <colgroup>
+              <col *ngFor="let col of columns | slice:1" [style.width]="col.width" [pSortableColumn]>
+            </colgroup>
+          </ng-template>
 
-        <ng-template pTemplate="body" let-rowData let-columns="columns">
-          <tr [pSelectableRow]="rowData">
-            <td *ngFor="let col of columns | slice:1">
-              {{rowData[col.field]}}
-            </td>
-          </tr>
-        </ng-template>
+          <ng-template pTemplate="header" let-columns>
+            <tr>
+              <th *ngFor="let col of columns | slice:1" [pSortableColumn]="col.field" (onClick)=resetSort()>
+                {{col.header | translate}}
+                <p-sortIcon [field]="col.field"></p-sortIcon>
+              </th>
+            </tr>
+          </ng-template>
 
-      </p-table>
+          <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr [pSelectableRow]="rowData">
+              <td *ngFor="let col of columns | slice:1">
+                {{rowData[col.field]}}
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </ng-container>
+
       <div style="position: relative; float: right; margin-top: 5px;">
         <p-button label="Export"></p-button>
         <div class="divider"></div>
