--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -1,138 +1,149 @@
 <div class="row">
-<nb-card style="width: 100%">
-      <nb-card-body>
-        <div class="header-container" >
-          <div>
-            <h3>{{ 'Account Management' | translate }}</h3>
-          </div>
-          <div style="display: inline-block;">
-            <h3>&nbsp;  </h3>
-          </div>
+  <nb-card style="width: 100%">
+    <nb-card-body>
+      <div class="header-container">
+        <div>
+          <h3>{{ 'Account Management' | translate }}</h3>
+        </div>
+        <div style="display: inline-block;">
+          <h3>&nbsp; </h3>
+        </div>
 
-          <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
-            <div class="ui-inputgroup">
-              <span class="ui-float-label">
-                <input id="float-input" type="text" size="50" [(ngModel)]="userSearch" pInputText onclick="this.setSelectionRange(0, this.value.length)" style="padding-top: 7px; padding-bottom: 7px;">
-                <label for="float-input">{{ 'Search by username or email' | translate }} </label>
-                <button id="search-btn" type="button" icon="pi pi-search" pButton label="{{ translate.get('Search') | async }}"  (click)="onUserSearch()" ></button>
+        <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
+          <div class="ui-inputgroup">
+            <span class="ui-float-label">
+              <input id="float-input" type="text" size="50" [(ngModel)]="userSearch" pInputText
+                onclick="this.setSelectionRange(0, this.value.length)" style="padding-top: 7px; padding-bottom: 7px;">
+              <label for="float-input">{{ 'Search by username or email' | translate }} </label>
+              <button id="search-btn" type="button" icon="pi pi-search" pButton
+                label="{{ translate.get('Search') | async }}" (click)="onUserSearch()"></button>
             </span>
 
           </div>
         </div>
 
-        <p-table [columns]="cols" [value]="userAccounts" [lazy]="true" #table (onLazyLoad)="loadUserAccountsLazy($event)"
-          [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh"
-          selectionMode="single" [(selection)]="selectedUserAccount" dataKey="id"
-          [totalRecords]="totalRecords" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" >
+        <p-table [columns]="cols" [value]="userAccounts" [lazy]="true" #table
+          (onLazyLoad)="loadUserAccountsLazy($event)" [loading]="loading" [scrollable]="true" [paginator]="true"
+          [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh" selectionMode="single"
+          [(selection)]="selectedUserAccount" dataKey="id" [totalRecords]="totalRecords"
+          (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
           <ng-template pTemplate="colgroup" let-columns>
-              <colgroup>
-                  <col *ngFor="let col of columns " [style.width]="col.width" [pSortableColumn]>
-              </colgroup>
+            <colgroup>
+              <col *ngFor="let col of columns " [style.width]="col.width" [pSortableColumn]>
+            </colgroup>
           </ng-template>
           <ng-template pTemplate="header" let-columns>
-              <tr>
-                  <th *ngFor="let col of columns "  [pSortableColumn]="col.field" (onClick)=resetSort()>
-                      {{col.header | translate}}
-                      <p-sortIcon [field]="col.field"></p-sortIcon>
-                  </th>
-              </tr>
+            <tr>
+              <th *ngFor="let col of columns " [pSortableColumn]="col.field" (onClick)=resetSort()>
+                {{col.header | translate}}
+                <p-sortIcon [field]="col.field"></p-sortIcon>
+              </th>
+            </tr>
           </ng-template>
           <ng-template pTemplate="body" let-rowData let-columns="cols">
-              <tr [pSelectableRow]="rowData">
-                  <td *ngFor="let col of cols ">
-                      {{rowData[col.field]}}
-                  </td>
-              </tr>
+            <tr [pSelectableRow]="rowData">
+              <td *ngFor="let col of cols ">
+                {{rowData[col.field]}}
+              </td>
+            </tr>
           </ng-template>
-      </p-table>
-      <div class="button-positioner">
-        <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}"></p-button>
+        </p-table>
+        <div class="button-positioner">
+          <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}">
+          </p-button>
+        </div>
+        <div class="button-positioner">
+          <p-button icon="fa fa-edit" (click)="showDialogToEdit()" label="{{ translate.get('Edit Account') | async }}">
+          </p-button>
+          <div class="divider"></div>
+        </div>
       </div>
-      <div class="button-positioner">
-        <p-button icon="fa fa-edit" (click)="showDialogToEdit()" label="{{ translate.get('Edit Account') | async }}"></p-button>
-        <div class="divider"></div>
-      </div>
-    </div>
 
-      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false"
-                [responsive]="true" showEffect="fade" [modal]="true"  height="600"
-                [style]="{width: '500px'}">
-          <div class="ui-g ui-fluid" *ngIf="!userAccount">
-              <i class="pi pi-info"></i><p>&nbsp;&nbsp; {{"Select row to edit"| translate }}</p>
-          </div>
-          <div class="ui-g ui-fluid" *ngIf="userAccount">
-            <form [formGroup]="userAccountForm" (ngSubmit)="save()">
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="username">Name:</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="username" formControlName="username" onclick="this.setSelectionRange(0, this.value.length)" autofocus class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">First Name is required</div>
-                    </div>
-              </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="password">Password:</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="password" formControlName="password" onclick="this.setSelectionRange(0, this.value.length)"   class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                    </div>
-                </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="email">Email:</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="email" type="email"  name="email" email formControlName="email" (click)="$event.target.select()"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                        <div *ngIf="f.email.errors.required">Email is required</div>
-                        <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-                    </div>
-                </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="city">City:</label>
-                </div>
-                <div class="ui-g-8">
-                  <p-dropdown formControlName="city" [options]="cities" optionLabel="label" ></p-dropdown>
-                </div>
-              </div>
+      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
+        showEffect="fade" [modal]="true" height="600" [style]="{width: '500px'}">
+        <div class="ui-g ui-fluid" *ngIf="!userAccount">
+          <i class="pi pi-info"></i>
+          <p>&nbsp;&nbsp; {{"Select row to edit"| translate }}</p>
+        </div>
+        <div class="ui-g ui-fluid" *ngIf="userAccount">
+          <form [formGroup]="userAccountForm" (ngSubmit)="save()">
             <div class="ui-g-12">
               <div class="ui-g-4">
-                  <label for="accountType">Account Type:</label>
+                <label for="username">Name:</label>
               </div>
               <div class="ui-g-8">
-                  <p-dropdown [options]="accountTypes" formControlName="accountType"></p-dropdown>
+                <input pInputText id="username" formControlName="username"
+                  onclick="this.setSelectionRange(0, this.value.length)" autofocus class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                  <div *ngIf="f.username.errors.required">First Name is required</div>
+                </div>
               </div>
             </div>
-          <div class="ui-g-12">
-            <div class="ui-g-4">
+            <div class="ui-g-12">
+              <div class="ui-g-4">
+                <label for="password">Password:</label>
+              </div>
+              <div class="ui-g-8">
+                <input pInputText id="password" formControlName="password"
+                  onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                  <div *ngIf="f.password.errors.required">Password is required</div>
+                  <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                </div>
+              </div>
+            </div>
+            <div class="ui-g-12">
+              <div class="ui-g-4">
+                <label for="email">Email:</label>
+              </div>
+              <div class="ui-g-8">
+                <input pInputText id="email" type="email" name="email" email formControlName="email"
+                  (click)="$event.target.select()" class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                  <div *ngIf="f.email.errors.required">Email is required</div>
+                  <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                </div>
+              </div>
+            </div>
+            <div class="ui-g-12">
+              <div class="ui-g-4">
+                <label for="city">Role:</label>
+              </div>
+              <div class="ui-g-8">
+                <p-dropdown formControlName="role" [options]="roles"></p-dropdown>
+              </div>
+            </div>
+            <div class="ui-g-12">
+              <div class="ui-g-4">
+                <label for="city">City:</label>
+              </div>
+              <div class="ui-g-8">
+                <p-dropdown formControlName="city" [options]="cities"></p-dropdown>
+              </div>
+            </div>
+            <div class="ui-g-12">
+              <div class="ui-g-4">
                 <label for="active">Active:</label>
+              </div>
+              <div class="ui-g-8">
+                <p-dropdown [options]="statuses" formControlName="active"></p-dropdown>
+              </div>
             </div>
-            <div class="ui-g-8">
-              <p-dropdown [options]="statuses" formControlName="active"></p-dropdown>
-            </div>
-          </div>
           </form>
         </div>
         <p-footer>
           <div *ngIf="userAccount">
             <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
-                <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
+              <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
+              <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
             </div>
           </div>
         </p-footer>
-    </p-dialog>
+      </p-dialog>
 
     </nb-card-body>
-    </nb-card>
-  </div>
+  </nb-card>
+</div>
