--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -4,7 +4,7 @@
 
       <div class="header-container">
         <div>
-          <h3>{{ 'Template Management' | translate }}</h3>
+          <h3>{{ 'Column Template' | translate }}</h3>
         </div>
         <div style="display: inline-block;">
           <h3>&nbsp; </h3>
@@ -49,7 +49,7 @@
             </tr>
           </ng-template>
         </p-table>
-        
+
         <div class="button-positioner">
           <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Add Template') | async }}"></p-button>
           <div class="divider"></div>
@@ -62,7 +62,7 @@
           <p-button icon="fa fa-trash" (click)="delete()" label="{{ translate.get('Delete Template') | async }}"></p-button>
           <div class="divider"></div>
         </div>
-        
+
       </div>
 
       <p-dialog header="Add Template" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
