--- a/src/app/pages/user-card/user-card.component.html
+++ b/src/app/pages/user-card/user-card.component.html
@@ -3,7 +3,7 @@
     <nb-card-body>
       <div class="header-container">
         <div style="display: inline-block;">
-          <h3>{{ 'userCards' | translate }}</h3>
+          <h3>{{ 'User Card' | translate }}</h3>
         </div>
 
       </div>
