import XML file.

--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -87,10 +87,10 @@
           </form>
         </nb-step>
 
-        <nb-step [stepControl]="fourthForm" label="Finish">
+        <nb-step [stepControl]="fourthForm" label="Import">
           <div class="step-container">
-            <h3>Wizard completed!</h3>
-            <button nbButton (click)="onImport()">finish</button>
+            <h3>RUN IMPORT!</h3>
+            <button nbButton (click)="onImport()">import</button>
           </div>
         </nb-step>
       </nb-stepper>
