user card: added customer no. column, removed customer surname column, adjusted column widths.

--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             <div class="divider"></div>
-            <button nbButton nbStepperNext>next</button>
+            <button nbButton status="primary" nbStepperNext>next</button>
           </form>
         </nb-step>
 
