added INSA logo and title.

--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -55,7 +55,7 @@
     .logo_image {
       background-repeat: no-repeat;
       background-size: 100px auto;
-      background-image: url('assets/images/insa_logo.png');
+      background-image: url('assets/images/small_logo.png');
     }
   }
 
